# nexus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION-2024.md  README.md  SECURITY.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  security.yml
crates/agents/src/: orchestrator.rs
crates/ai-engine/src/: nlp_command.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  config.rs  error.rs  lib.rs  plugin.rs
crates/core/src/security/: audit.rs  config.rs  crypto.rs  mod.rs  ratelimit.rs  validation.rs
crates/plugins/example/: Cargo.toml
crates/plugins/example/src/: lib.rs
docs/: README.md
