[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/agents",
    "crates/web3",
    "crates/ai-engine",
    "crates/plugins/example",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.82" # Latest stable Rust as of 2025
authors = ["NEXUS Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gzeu/nexus"
homepage = "https://nexus-terminal.org"
documentation = "https://docs.nexus-terminal.org"
keywords = ["ai", "web3", "terminal", "agents", "cli"]
categories = ["command-line-utilities", "development-tools", "cryptography"]

[workspace.dependencies]
# Core async runtime - 2025 versions
tokio = { version = "1.45", features = ["full", "tracing"] }
async-trait = "0.1.85"

# Error handling - 2025 enhanced
anyhow = "1.0.95"
thiserror = "2.0"
color-eyre = "0.6" # Enhanced error reporting for 2025

# Serialization - 2025 performance optimized
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.132"
toml = "0.8.20"
bincode = "1.3" # Binary serialization for performance

# CLI - 2025 enhanced UX
clap = { version = "4.5.20", features = ["derive", "color", "suggestions", "cargo"] }
ratatui = "0.29" # Modern TUI framework for 2025
crossterm = "0.28"

# Logging - 2025 observability
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter", "tracing-log"] }
tracing-opentelemetry = "0.27" # OpenTelemetry integration for 2025
opentelemetry = "0.26"

# Security - 2025 state-of-the-art
ring = "0.17.8" # Google's cryptography library
argon2 = "0.5.3"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1" # Alternative AEAD for 2025
ed25519-dalek = "2.1" # Ed25519 signatures
x25519-dalek = "2.0" # Key exchange
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
secrecy = "0.8.0"

# AI/LLM Integration - 2025 cutting edge
ollama-rs = "0.2.1" # Local LLM integration
openai-api-rs = "5.1" # OpenAI API client
anthropic-sdk = "0.2" # Claude API integration
mistral-rs = "0.3" # Mistral AI integration
langchain-rust = "0.4" # LangChain for Rust
candle-core = "0.7" # ML framework for local inference
candle-transformers = "0.7"
tokenizers = "0.20.4"

# Web3 - 2025 multi-chain ecosystem
alloy = { version = "0.6", features = ["full"] } # Ethereum foundation's 2025 library
ethers = "2.0.16" # Still relevant for some use cases
solana-client = "2.1" # Solana integration
near-sdk = "5.5" # NEAR Protocol
polkadot-sdk = "1.15" # Polkadot ecosystem
sui-sdk = "1.42" # Sui blockchain
aptos-sdk = "4.2" # Aptos integration

# Plugin system - 2025 enhanced
libloading = "0.8.5"
wasmtime = "26.0" # WASM plugin support for 2025
wasmer = "4.3" # Alternative WASM runtime

# Performance and utilities
rayon = "1.10" # Parallel computing
dashmap = "6.1" # Concurrent HashMap
parking_lot = "0.12.3" # High-performance synchronization
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0" # Directory utilities

# HTTP/Network - 2025 performance
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
hyper = "1.5"
rustls = "0.23.15" # TLS without OpenSSL dependency

# Database - 2025 embedded and distributed
surrealdb = "2.2" # Multi-model database for 2025
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls"] }
redb = "2.1" # Embedded key-value store

# Testing - 2025 enhanced
tokio-test = "0.4.4"
tempfile = "3.14"
proptest = "1.5" # Property-based testing
criterion = "0.5.1" # Benchmarking
mock_instant = "0.5" # Time mocking for tests

# Colors and terminal
termcolor = "1.4.1"
colored = "2.1"
console = "0.15.8"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "warn"
unused_import_braces = "warn"
missing_docs = "warn"
future_incompatible = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# 2025 specific lints
suspicious = "deny"
perf = "warn"
style = "warn"
complexity = "warn"

[profile.release]
# 2025 optimized release profile
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
# 2025 development profile
incremental = true
debug = true
opt-level = 0

[profile.test]
# 2025 test profile
incremental = true
debug = true