[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
clap.workspace = true
nexus-core = { path = "../core" }
termcolor.workspace = true

[lints]
workspace = true