[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for NEXUS - The Living Terminal"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap.workspace = true
termcolor.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# Local dependencies
nexus-core = { path = "../core", features = ["security"] }

[features]
default = ["security"]
security = ["nexus-core/security"]
web3 = ["nexus-core/web3"]

[lints]
workspace = true