[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for NEXUS - The Living Terminal"

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
libloading.workspace = true

# Security dependencies (using workspace versions)
regex.workspace = true
rand.workspace = true
sha2.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
base64.workspace = true
secrecy.workspace = true
zeroize.workspace = true

# Optional Web3 support
alloy = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }

[features]
default = ["security"]
security = []
web3 = ["alloy", "alloy-primitives"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[lints]
workspace = true
