[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for NEXUS - The Living Terminal"

[dependencies]
# Essential workspace dependencies only
anyhow.workspace = true
tracing.workspace = true

[features]
default = ["security"]
security = []

[lints]
workspace = true