[package]
name = "nexus-plugin-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nexus-core = { path = "../../core" }

[lints]
workspace = true