[package]
name = "nexus-plugin-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Example plugin for NEXUS"

[dependencies]
nexus-core = { path = "../../core" }

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
